@@ -135,7 +135,7 @@ public class HistQuotes2Request {
     }
 
     private static BufferedReader getBufferedReader(String url) throws IOException {
-        URL request = new URL(url);
+        URL request = java.net.URI.create(url).toURL();
         RedirectableRequest redirectableRequest = new RedirectableRequest(request, 5);
         redirectableRequest.setConnectTimeout(YahooFinance.CONNECTION_TIMEOUT);
         redirectableRequest.setReadTimeout(YahooFinance.CONNECTION_TIMEOUT);
